# personal-news

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  start-backend.bat  start-frontend.bat  start.sh
backend/: .env.example  config.py  dns_patch.py  feeds_data.py  fetcher.py  main.py  pocketbase.py  pyproject.toml  scheduler.py  setup_db.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/manage/: page.tsx
frontend/src/components/: ArticleModal.tsx  CategoryBadge.tsx  Header.tsx  KeyboardHelp.tsx  MobileSidebar.tsx  NewSinceBanner.tsx  NewsCard.tsx  NewsGrid.tsx  SaveButton.tsx  Sidebar.tsx  SkeletonCard.tsx  ThemeProvider.tsx
frontend/src/lib/: api.ts  categoryColors.ts  types.ts  useKeyboardNav.ts
